--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev -p 3000",
+    "dev:v2": "next dev -p 3001",
     "build": "next build",
+    "build:v2": "next build",
     "start": "next start",
+    "start:v2": "next start -p 3001",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "format": "prettier --write ."
   },
