--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ NEXT_PUBLIC_ENABLE_ANALYTICS=false
 
 # API Keys (replace with actual keys in production)
 NEXT_PUBLIC_OPENAI_API_KEY=sk-xxxxxxxxxxxx
+NEXT_PUBLIC_GEMINI_API_KEY=AIzaSyD1LJ0wLgPDfw28DPe9bWUAUlVsOpj_b6w
 
 # Test variable (to show edit worked)
 TEST_CASCADE_EDIT=success
